# py-aep

./: CONTRIBUTING.md  pyproject.toml  zensical.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/agents/: aep-dev.agent.md  architect.agent.md  serialize.agent.md
.github/workflows/: docs.yml  quality.yml
docs/: differences.md  extendscript_coverage.md  limitations.md
docs/api/: index.md
docs/api/other/: essential_graphics.md
samples/bugs/: outputmodule_path.aep
scripts/: generate_roundtrip_files.py  griffe_properties.py
src/py_aep/: __init__.py
src/py_aep/binary/: bin_utils.py  bitfield.py  chunk.py  composition_chunks.py  fmt_field.py  footage_chunks.py  item_chunks.py  layer_chunks.py  ldat_chunks.py  misc_chunks.py  property_chunks.py  registry.py  render_chunks.py  scalar_chunks.py
src/py_aep/cli/: compare.py
src/py_aep/cos/: descriptors.py  serializer.py
src/py_aep/data/: match_names.py
src/py_aep/kaitai/: aep.ksy  aep.py  chunk.py  descriptors.py  materializer.py  patches.py  proxy.py  registry.py  reverses.py  utils.py
src/py_aep/models/: application.py  project.py
src/py_aep/models/items/: composition.py
src/py_aep/models/layers/: av_layer.py  layer.py  light_layer.py
src/py_aep/models/properties/: keyframe.py  keyframe_ease.py  marker.py  mask_property_group.py  property.py  property_base.py  property_group.py  shape.py  specs.py
src/py_aep/models/renderqueue/: output_module.py
src/py_aep/models/renderqueue/format_options/: jpeg.py  png.py
src/py_aep/models/sources/: footage.py
src/py_aep/models/viewer/: view_options.py
src/py_aep/parsers/: application.py  composition.py  effect.py  item.py  layer.py  output_module.py  project.py  property.py  property_value.py  specialized_properties.py  synthesis.py
src/py_aep/resolvers/: interpolation.py  output.py
tests/: conftest.py  test_binary_io.py  test_cli_validate.py  test_cos.py  test_descriptors.py  test_format_options.py  test_kaitai_utils.py  test_migration_invariants.py  test_models_application.py  test_models_composition.py  test_models_footage.py  test_models_item.py  test_models_layer.py  test_models_marker.py  test_models_project.py  test_models_property.py  test_models_renderqueue.py  test_models_selection.py  test_models_text.py  test_specs.py  test_value_at_time.py
