[project]
name = "py-aep"
dynamic = ["version"]
description = "A package for working with After Effects AEP files."
readme = "readme.md"
license = {text = "MIT"}
authors = [
    {name = "Aurore Delaunay", email = "del-github@blurme.net"}
]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: File Formats",
    "Topic :: Multimedia :: Graphics",
    "Typing :: Typed",
]
dependencies = [
    "kaitaistruct>=0.9",
    "importlib_metadata; python_version < '3.8'",
    "typing_extensions>=3.7; python_version < '3.8'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0; python_version >= '3.8'",
    "mypy>=1.0",
    "ruff>=0.1",
]
docs = [
    "zensical>=0.0.29; python_version >= '3.10'",
    "mkdocstrings[python]>=0.24.0; python_version >= '3.10'",
    "pymdown-extensions>=10.0; python_version >= '3.10'",
    "ruff>=0.1; python_version >= '3.10'",
]

[project.urls]
Repository = "https://github.com/forticheprod/py-aep"
Documentation = "https://forticheprod.github.io/py-aep/"
Changelog = "https://github.com/forticheprod/py-aep/releases"

[project.scripts]
aep-visualize = "py_aep.cli.visualize:main"
aep-compare = "py_aep.cli.compare:main"
aep-validate = "py_aep.cli.validate:main"

[build-system]
requires = ["hatchling>=1.18", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/py_aep"]

[tool.ruff]
target-version = "py37"
line-length = 88
exclude = [
    "src/py_aep/kaitai/aep.py",  # Auto-generated by Kaitai Struct
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "kaitaistruct.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "py_aep.kaitai.aep"
ignore_errors = true

[[tool.mypy.overrides]]
module = "py_aep.cos.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v -ra --showlocals -n auto"

[tool.coverage.run]
source = ["src/py_aep"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]

